--- a/Tracer/public/index.html
+++ b/Tracer/public/index.html
@@ -28,10 +28,10 @@
         <div class="container">
             <div class="text-content">
                 <h2><em>TRACING SERVICE</em> for <span>ERC-20 TOKEN</span> ! </h2>
-                <p>A-Decentralized-Digital-Currency-Tracing-Service is a service for you to trace the ERC20 tokens. The token transfer Txn are provided by Oraclize(Provable) with Etherscan APIs. Please register your token address first. Thank you.</p>
+                <p>A-Decentralized-Digital-Currency-Tracing-Service is a service for you to trace the ERC20 tokens. The token transfer Txn are provided by Oraclize(Provable) with Etherscan APIs. Please add your token address first. Thank you.</p>
                 <p id="ct"></p>
                 <div class="primary-white-button">
-                    <a href="registe.html">Register ERC20 Token</a>
+                    <a href="registe.html">New ERC20 Token</a>
                 </div>
                 <div class="primary-blue-button">
                     <a href="query.html">VIEW TRANSFER History !</a>
