--- a/Tracer/public/registe.html
+++ b/Tracer/public/registe.html
@@ -29,7 +29,7 @@
         <div class="row cb-slideshow-text-container">
             <div class="tm-content col-xl-6 col-sm-8 col-xs-8 ml-auto section">
                 <header class="mb-5">
-                    <h1>Registe !</h1>
+                    <h1>New It !</h1>
                 </header>
                 <p class="mb-5">Enter the TOKEN ADDRESS you want to trace.</p>
                 <div class="row form-section">
@@ -42,7 +42,7 @@
                         <button class="tm-btn-subscribe" id="regButton">Let's TRACE</button>
                     </div> -->
                     <div align="left" style="float:left;width:250px;">
-                        <button class="tm-btn-subscribe" id="regButton">Register Token</button>
+                        <button class="tm-btn-subscribe" id="regButton">New Token</button>
                     </div>
                     <div align="right" style="float:right;width:250px;">
                         <button class="tm-btn-subscribe" id="alterButton" style="background-color:#FFA74F;">Change Token Info</button>
