fix: turn to query after altering, interval to timeout of query

--- a/Tracer/public/altToken.html
+++ b/Tracer/public/altToken.html
@@ -120,7 +120,7 @@
                 }, function(result) {
                     if (result.receipt) {
                         alert('Done!');
-                        window.location.href = 'altToken.html';
+                        window.location.href = 'query.html';
                     } else {
                         alert('Fail!');
                     }
